# docker-multi-db-env

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/dependencies/: mongodb.py  mysql.py
app/routers/: mongo_generic.py  mysql_generic.py
