[tool.poetry]
name = "docker-multi-db-env"
version = "0.1.0"
description = "A multi-database environment with MySQL, MongoDB, and a generic FastAPI app."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# Project requires Python 3.11 (allows 3.11.x, but <3.12)
[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "*"
uvicorn = "*"
SQLAlchemy = "*"
pymongo = "*"
mysql-connector-python = "*"

# If you want asynchronous Mongo, you can also include:
# motor = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
